custom scrollbar for panel when the content gets too long and fix issue with pencil button moving with scrollbar

--- a/src/styles/Panel.css
+++ b/src/styles/Panel.css
@@ -1,8 +1,6 @@
 .panel {
   display: flex;
-  height: 100%;
   box-sizing: border-box;
-  width: 100%;
   background-color: #272134;
   flex-direction: column;
   align-items: center;
@@ -53,7 +51,9 @@
 .edit-icon-image {
   position: absolute;
   border: none;
-  right: 15px;
+  right: -30px;
+  top: 50%;
+  margin-top: -15px;
   background-color: transparent;
 }
 
@@ -87,6 +87,7 @@
   font-weight: bold;
   word-wrap: break-word;
   color: #dddcdf;
+  position: relative;
 }
 
 .panel-options-item {
@@ -125,7 +126,7 @@
 }
 .panel-item-content {
   position: relative;
-  font-size: 33px;
+  font-size: 32px;
   margin-top: 7px;
   margin-right: 5px;
   display: flex;
@@ -146,6 +147,7 @@
   transform: scaleX(-1);
   height: 30px;
 }
+
 .panel-item-name {
   display: flex;
   flex: 1;
@@ -167,16 +169,22 @@
   margin: 35px 25px;
 }
 
-/* .panel-options-item {
-  font-weight: normal;
-  font-size: 2.5rem;
-  width: fit-content;
-  margin: 0px;
-  color: #dddcdf;
-  justify-content: flex-start;
-} */
-/* 
-.panel-options-item:hover {
-  font-weight: bold;
-  color: "#cdcccf";
-} */
+/*scrollbar stuff*/
+.panel-content::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+.panel-content::-webkit-scrollbar-track {
+  background: #333333;
+}
+
+/* Handle */
+.panel-content::-webkit-scrollbar-thumb {
+  background: #585166;
+}
+
+/* Handle on hover */
+.panel-content::-webkit-scrollbar-thumb:hover {
+  background: #fff;
+}
